--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,7 +8,7 @@
   padding: 10px 20px;
   font-family: "Montserrat", sans-serif;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  position: sticky; /* Make the navbar sticky */
+  position: webkit-sticky; /* Make the navbar sticky */
   top: 0;
   z-index: 1000;
 }
